homelab/core/lgtm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-lgtm
  namespace: monitoring
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.178.203
  selector:
    app: otel-lgtm
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: otel-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: otel-http
      protocol: TCP
      port: 4318
      targetPort: 4318
