homelab/core/lgtm/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
---
##################### 
# OTEL-LGTM-STACK
#####################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-lgtm
  namespace: observability
  labels:
    app: otel-lgtm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-lgtm
  template:
    metadata:
      labels:
        app: otel-lgtm
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - worker
            - weight: 50
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - master
      containers:
        - name: otel-lgtm
          image: grafana/otel-lgtm:latest
          ports:
            - containerPort: 3000
            - containerPort: 3100
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 14268
          volumeMounts:
            - name: lgtm-config
              mountPath: /etc/lgtm
              readOnly: true

            - name: collector-config-volume
              mountPath: /etc/otel-collector
              readOnly: true
      volumes:
        - name: lgtm-config
          configMap:
            name: otel-lgtm-config

        - name: collector-config-volume
          configMap:
            name: otel-lgtm-collector-config
---
apiVersion: v1
kind: Service
metadata:
  name: otel-lgtm
  namespace: observability
spec:
  selector:
    app: otel-lgtm
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: otel-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: otel-http
      protocol: TCP
      port: 4318
      targetPort: 4318
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-lgtm-ingress
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-lgtm
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-lgtm-tailscale
  namespace: observability
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: otel-lgtm
      port:
        number: 3000
